--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,14 @@ iframe {
     ;
 }
 
+h3{
+    color: white;
+    background-color: rgb(0, 37, 107);
+    width: fit-content;
+    border-radius: 15%;
+    padding: 0.5%;
+}
+
 div {
     background-color: rgb(0, 37, 107);
     color: white;
@@ -131,6 +139,11 @@ img {
     image-rendering: optimizeSpeed;
     border-image: round;
     border-radius: 10%;
+}
+
+.slika{
+    width: fit-content;
+    width: auto;
 }
 
 .navigacija {
