--- a/CSS/style.css
+++ b/CSS/style.css
@@ -271,6 +271,14 @@ a:active {
     color: white;
 }
 
+.povratnaPoruka{
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
+    font-size: medium;
+    display: inline;
+    margin: 1%;
+}
+
 h4 a {
     margin: 0.5em;
 }
