--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,6 @@ html {
     scroll-behavior: smooth;
 }
 
-.header {
-    background-color: ;
-}
-
 body {
     background-color: white;
 }
@@ -108,12 +104,10 @@ mark {
 @keyframes pomeranje {
     0% {
         left: -5%;
-        top: 0px;
     }
 
     100% {
         left: 90%;
-        top: 0px;
     }
 }
 
@@ -271,12 +265,20 @@ a:active {
     color: white;
 }
 
-.povratnaPoruka{
+.povratnaPoruka {
     color: rgb(255, 255, 255);
     background-color: rgb(255, 0, 0);
     font-size: medium;
     display: inline;
     margin: 1%;
+}
+
+.lose {
+    background-color: rgb(255, 0, 0);
+}
+
+.dobro {
+    background-color: rgb(0, 255, 0);
 }
 
 h4 a {
